Aug 09, 2007 - chris
o hamsterdb is now released under GPL 2 *or any later version*, which also
	includes GPL 3.

Aug 08, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.5

Aug 08, 2007 - chris
o fixed CreateFile calls on win32 - call CreateFileW if UNICODE is defined,
    otherwise call CreateFileA

Aug 04, 2007 - chris
o fixed HAM_READ_ONLY support for win32 - the file handle is now created
    with GENERIC_READ, not GENERIC_READ|GENERIC_WRITE

Aug 03, 2007 - chris
o finalized support for record numbers
o added a sample for record numbers (samples/db4.c)

Aug 01, 2007 - chris
o removed status codes HAM_SHORT_READ and HAM_SHORT_WRITE; instead, 
    HAM_IO_ERROR is now used
o ham_flush() now also flushes the header page (so far the header page was
    forgotten under certain circumstances)
o set the DB_CHUNKSIZE (which is the minimum size of a freelist entry) to 
    32 instead of 64; generated database files are much smaller now

Jul 22, 2007 - chris
o when opening an environment file with ham_open (as a database), the first
    database in the environment is now opened

Jul 21, 2007 - chris
o when opening an environment, the flags were not stored
o don't allow ham_env_create_db if the environment was opened r/o
o calling ham_set_prefix_compare_func and ham_set_compare_func with NULL
    as second parameter resets the compare function to the default
    compare function (based on memcmp)
o bugfix: failed to open environments, which were created with a 
    different pagesize than the default pagesize; fixed

Jul 19, 2007 - chris
o bugfix: if a ham_db_t handle was reused after ham_close, an internal
    pointer was not set to NULL, which resulted in a segfault
o replaced error code HAM_INV_INDEX with HAM_NOT_INITIALIZED
o replaced error code HAM_ENV_FULL with HAM_LIMITS_REACHED

Jun 15, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.4
